# pachube-client-haskell

./: .gitignore  Example.hs  ExampleSimplest.hs  Output.hs  PachubeClient.hs  PachubeClientAPIKey.hs.template  README.txt  Types.hs  XmlParse.hs  compile  notes.txt  pachube_client.cabal  reader_example.hs
Pachube/: Example.hs  ExampleSimplest.hs  Output.hs  PachubeClient.hs  Types.hs  XmlParse.hs
sample_xml/: environment.xml
scratch/: ReaderExample.hs
